--- a/SpMVC27_SecureV4/src/main/webapp/WEB-INF/views/include/include-nav.jspf
+++ b/SpMVC27_SecureV4/src/main/webapp/WEB-INF/views/include/include-nav.jspf
@@ -88,7 +88,7 @@ $(function(){
 			<a href="${rootPath}/user/mypage">MY PAGE</a>
 		</sec:authorize>
 		<sec:authorize access="hasRole('ROLE_ADMIN')">
-			<a href="#">관리자 홈</a>
+			<a href="${rootPath}/admin">관리자 홈</a>
 		</sec:authorize>
 </nav>
 
